# grilo-xml-factory-plugin

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  dataref.c  dataref.h  expandable-string.c  expandable-string.h  fetch.c  fetch.h  grl-xml-factory.c  grl-xml-factory.h  grl-xml-factory.xml  grl-xml-factory.xsd  json-ghashtable.c  json-ghashtable.h  log.c  log.h
src/sources/: Makefile.am  grl-aljazeera.xml  grl-bbc-news.xml  grl-digitally-imported.xml  grl-flickr-xml.xml  grl-google-images.xml  grl-jamendo.xml  grl-justin-tv.xml  grl-lastfm-albumart.xml  grl-live-streams.xml  grl-nascar.xml  grl-online-radio.xml  grl-tmdb.xml
tests/: Makefile.am  test_private_keys.c  test_regexp.c  test_replace.c  test_strings.c  test_url.c  test_xml_factory_expandable_string.c  test_xml_factory_log.c  test_xml_factory_private_keys.c  test_xml_factory_regexp.c  test_xml_factory_replace.c  test_xml_factory_requirements.c  test_xml_factory_result.c  test_xml_factory_script.c  test_xml_factory_strings.c  test_xml_factory_url.c
tests/data/: network-data.ini  test-url.data
tests/sources/: xml-test-empty-strings.xml  xml-test-expandable-string.xml  xml-test-log.xml  xml-test-log.xml.in  xml-test-private-keys.xml  xml-test-regexp-decode-input.xml  xml-test-regexp-full.xml  xml-test-regexp-no-expression.xml  xml-test-regexp-no-input.xml  xml-test-regexp-no-output.xml  xml-test-regexp-repeat-expression.xml  xml-test-replace.xml  xml-test-requirements.xml  xml-test-result.xml  xml-test-script-init-fail.xml  xml-test-script-init-success.xml  xml-test-strings.xml  xml-test-url.xml
